--- a/bluesky-boot-docs/src/main/resources/static/brick/index.html
+++ b/bluesky-boot-docs/src/main/resources/static/brick/index.html
@@ -9,6 +9,121 @@
 <title>개발자 가이드</title>
 <link rel="stylesheet" href="css/spring.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<style>
+.hidden {
+	display: none;
+}
+
+.switch {
+	border-width: 1px 1px 0 1px;
+	border-style: solid;
+	border-color: #7a2518;
+	display: inline-block;
+}
+
+.switch--item {
+	padding: 10px;
+	background-color: #ffffff;
+	color: #7a2518;
+	display: inline-block;
+	cursor: pointer;
+}
+
+.switch--item:not(:first-child) {
+	border-width: 0 0 0 1px;
+	border-style: solid;
+	border-color: #7a2518;
+}
+
+.switch--item.selected {
+	background-color: #7a2519;
+	color: #ffffff;
+}
+</style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
+<script type="text/javascript">
+function addBlockSwitches() {
+	$('.primary').each(function() {
+		primary = $(this);
+		createSwitchItem(primary, createBlockSwitch(primary)).item.addClass("selected");
+		primary.children('.title').remove();
+	});
+	$('.secondary').each(function(idx, node) {
+		secondary = $(node);
+		primary = findPrimary(secondary);
+		switchItem = createSwitchItem(secondary, primary.children('.switch'));
+		switchItem.content.addClass('hidden');
+		findPrimary(secondary).append(switchItem.content);
+		secondary.remove();
+	});
+}
+
+function createBlockSwitch(primary) {
+	blockSwitch = $('<div class="switch"></div>');
+	primary.prepend(blockSwitch);
+	return blockSwitch;
+}
+
+function findPrimary(secondary) {
+	candidate = secondary.prev();
+	while (!candidate.is('.primary')) {
+		candidate = candidate.prev();
+	}
+	return candidate;
+}
+
+function createSwitchItem(block, blockSwitch) {
+	blockName = block.children('.title').text();
+	content = block.children('.content').first().append(block.next('.colist'));
+	item = $('<div class="switch--item">' + blockName + '</div>');
+	blockSwitch.append(item);
+	return {'item': item, 'content': content};
+}
+
+function globalSwitch() {
+	$('.switch--item').each(function() {
+		var blockId = blockIdForSwitchItem($(this));
+		$(this).off('click');
+		$(this).on('click', function() {
+			selectedText = $(this).text()
+			window.localStorage.setItem(blockId, selectedText);
+			$(".switch--item").filter(function() {
+				return blockIdForSwitchItem($(this)) === blockId;
+			}).filter(function() {
+				return $(this).text() === selectedText;
+			}).each(function() {
+				select($(this))
+			});
+		});
+		if ($(this).text() === window.localStorage.getItem(blockId)) {
+			select($(this))
+		}
+	});
+}
+
+function blockIdForSwitchItem(item) {
+	idComponents = []
+	idComponents.push(item.text().toLowerCase());
+	item.siblings(".switch--item").each(function(index, sibling) {
+		idComponents.push($(sibling).text().toLowerCase());
+	});
+	return idComponents.sort().join("-")
+}
+
+function select(selected) {
+	selected.addClass('selected');
+	selected.siblings().removeClass('selected');
+	selectedContent = selected.parent().siblings(".content").eq(selected.index())
+	selectedContent.removeClass('hidden');
+	selectedContent.siblings().addClass('hidden');
+}
+
+$(addBlockSwitches);
+$(globalSwitch);
+
+</script>
+
 </head>
 <body class="article">
 <div id="header">
@@ -90,11 +205,11 @@ Unresolved directive in index.adoc - include::..\..\target\generated-snippets/er
 </dd>
 <dt class="hdlist1">docdir</dt>
 <dd>
-<p>C:/Users/luver/git/bluesky-boot/bluesky-boot-docs/target/refdocs</p>
+<p>C:/Users/bluesky/Documents/workspace-bluesky/bluesky-boot/bluesky-boot-docs/target/refdocs</p>
 </dd>
 <dt class="hdlist1">docfile</dt>
 <dd>
-<p>C:/Users/luver/git/bluesky-boot/bluesky-boot-docs/target/refdocs/brick/index.adoc</p>
+<p>C:/Users/bluesky/Documents/workspace-bluesky/bluesky-boot/bluesky-boot-docs/target/refdocs/brick/index.adoc</p>
 </dd>
 <dt class="hdlist1">imagesdir</dt>
 <dd>
@@ -166,7 +281,7 @@ Includes can be tricky!
 <div id="footer">
 <div id="footer-text">
 Version {project-version}<br>
-Last updated 2020-06-19 21:24:44 +0900
+Last updated 2020-06-19 09:42:17 +0900
 </div>
 </div>
 <script type="text/javascript" src="js/tocbot/tocbot.min.js"></script>
