Add support for bluesky-boot-autoconfigure properties in documentation
- Update `bluesky-boot-properties.adoc` to include new section
- Modify `spring-configuration-metadata.js` to handle new module
- Update `bluesky-boot-properties.html` to include new section in TOC
- Adjust JavaScript to dynamically load properties for new module
- Remove unused title field from metadata context
- Update footer timestamp in HTML file

--- a/bluesky-boot-build/bluesky-boot-docs/src/main/resources/static/bluesky-boot/bluesky-boot-properties.html
+++ b/bluesky-boot-build/bluesky-boot-docs/src/main/resources/static/bluesky-boot/bluesky-boot-properties.html
@@ -32,6 +32,7 @@
 <div id="toctitle">Table of Contents</div>
 <span id="back-to-index"><a href="index.html">Back to index</a></span><ul class="sectlevel1">
 <li><a href="#bluesky-boot-properties">1. bluesky-boot properties</a></li>
+<li><a href="#bluesky-boot-autoconfigure-properties">2. bluesky-boot-autoconfigure properties</a></li>
 </ul>
 </div>
 </div>
@@ -39,14 +40,17 @@
 <div class="sect1">
 <h2 id="bluesky-boot-properties"><a class="anchor" href="#bluesky-boot-properties"></a>1. bluesky-boot properties</h2>
 <div class="sectionbody">
-<div id="springConfigurationMetadataContainer">
-
+<div id="bluesky-boot-container"></div>
 </div>
+</div>
+<div class="sect1">
+<h2 id="bluesky-boot-autoconfigure-properties"><a class="anchor" href="#bluesky-boot-autoconfigure-properties"></a>2. bluesky-boot-autoconfigure properties</h2>
+<div class="sectionbody">
+<div id="bluesky-boot-autoconfigure-container"></div>
 <script src="js/handlebars.min.js"></script>
 <script src="js/spring-configuration-metadata.js"></script>
 
 <script id="spring-configuration-metadata-template" type="text/x-handlebars-template">
-	<h2>{{title}}</h2>
 	{{#if description}}
 		<p>{{description}}</p>
 	{{/if}}
@@ -80,7 +84,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-03-27 17:40:54 +0900
+Last updated 2025-03-29 23:05:37 +0900
 </div>
 </div>
 </div>
